--- a/ReClimb_Cpp/Config/DefaultInput.ini
+++ b/ReClimb_Cpp/Config/DefaultInput.ini
@@ -80,6 +80,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Jump",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=SpaceBar)
 +ActionMappings=(ActionName="Shift",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftShift)
 +ActionMappings=(ActionName="Climb",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftAlt)
++ActionMappings=(ActionName="Attack",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Heal",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=H)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveRight",Scale=1.000000,Key=D)
